--- a/public/lib/patternfly/less/patternfly-additions.less
+++ b/public/lib/patternfly/less/patternfly-additions.less
@@ -36,6 +36,7 @@
 @import "icons.less";
 @import "infotip.less";
 @import "layouts.less";
+@import "list-view.less";
 @import "login.less";
 @import "navbar.less";
 @import "navbar-alt.less";
@@ -44,4 +45,5 @@
 @import "sidebar.less";
 @import "spinner.less";
 @import "syntax-highlighting.less";
+@import "toast.less";
 @import "toolbar.less";
